<resources>
    <string name="app_name">FundFest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_project">Add Project</string>
    <string name="openDesc">open</string>
    <string name="closeDesc">close</string>
    <string name="action_search">Search</string>

    <string name="projects">Projects</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="about_us">About Us</string>

    <string name="preferences">Preferences</string>
    <string name="log_in">Log In</string>

    <string-array name="tab_items">
        <item>Categories</item>
        <item>Featured</item>
        <item>Popular</item>
    </string-array>

    <string-array name="drawer_items">
        <item>Projects</item>
        <item>Schedule</item>
        <item>Map</item>
        <item>Events</item>
        <item>Abouts Us</item>
        
        <item>Preferences</item>
        <item>Log In</item>
    </string-array>

</resources>
